<resources>
    <string name="app_name">pethelper</string>
    <string name="tab_bar_pets">Pets</string>
    <string name="tab_bar_records">Records</string>
    <string name="tab_bar_notifications">Notifications</string>
    <string name="tab_bar_settings">Settings</string>
    <string name="add_pet">Add Pet</string>
    <string name="update_pet">Update Pet</string>
    <string name="pet_picture">Pet Picture</string>
    <string name="name_hint">Name</string>
    <string name="type_hint">Type</string>
    <string name="breed_hint">Breed</string>
    <string name="age_hint">Age</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="neutered_spayed">Neutered/Spayed</string>
    <string name="weight_kg"> (kg)</string>
    <string name="weight_lbs"> (lbs)</string>
    <string name="aggressive_level">Aggressive Level</string> 
    <string name="save">Save</string>
    <string name="Add">Add</string>
    <string name="Edit">Edit</string>
    <string name="loading_pet_details">Loading pet details</string>
    <string name="add_pet_image">Add Pet Image</string>
    <string name="selected_pet_image">Selected Pet Image</string>
    <string name="image_selection_cancelled">Image selection cancelled</string>
    <string name="color_hint">Color</string>
    <string name="gender_hint">Gender</string>
    <string name="weight_hint">Weight</string>
    <string name="allergies_hint">Allergies</string>
    <string name="diet_hint">Diet</string>
    <string name="training_hint">Training</string>
    <string name="titles_hint">Titles</string>
    <string name="notes_hint">Notes</string>
    <string name="pet_picture_placeholder">Pet Picture Placeholder</string>
    <string name="pet_id">ID: %1$s</string>
    <string name="pet_type">Type: %1$s</string>
    <string name="pet_gender">Gender: %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="pet_breed">Breed: %1$s</string>
    <string name="pet_color">Color: %1$s</string>
    <string name="pet_microchip_id">Microchip ID: %1$s</string>
    <string name="pet_age">Age: %1$s years</string>
    <string name="pet_date_of_birth">Date of Birth: %1$s</string>
    <string name="pet_weight_kg">Weight: %1$s kg</string>
    <string name="pet_weight_lbs">Weight: %1$s lbs</string>
    <string name="not_specified">Not specified</string>
    <string name="not_available">Not available</string>
    <string name="pet_records">Pet Records</string>
    <string name="add_record">Add Record</string>
    <string name="record_details_title">%1$s Details</string>
    <string name="delete_record">Delete Record</string>
    <string name="description_hint">Description</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date: %1$s</string>
    <string name="add_new_record">Add New %1$s Record</string>
    <string name="cancel">Cancel</string>
    <string name="no_records_available">No Records Available</string>
    <string name="no_description">No Description</string>
    <string name="record_date">Date: %1$s</string>
    <string name="no_date">No Date</string>
    <string name="content_type_empty">%1$s is empty</string>
    <string name="update_record">Update Record</string>
    <string name="select_pet">Select Pet</string>
    <string name="date_hint">Date</string>
    <string name="back">Back</string>
    <string name="scan_PDF">Scan PDF</string>
    <string name="import_PDF">Import PDF</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="delete">Delete</string>
    <string name="show_active_pets">Show Active Pets</string>
    <string name="show_archived_pets">Show Archived Pets</string>
    <string name="add_service">Add Service</string>
    <string name="tab_bar_services">Services</string>
    <string name="update_service">Update Service</string>
    <string name="address_hint">Address</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="secondary_phone_hint">Secondary Phone</string>
    <string name="service_picture">Service Picture</string>
    <string name="loading_service_details">Loading service details</string>
    <string name="confirm_delete_title">Confirm Deletion</string>
    <string name="confirm_archive_title">Confirm Archiving</string>
    <string name="confirm_archive_message_pet">Are you sure you want to archive this pet?</string>
    <string name="confirm_delete_message_service">Are you sure you want to delete this service?</string>
    <string name="confirm_delete_message_pet">Are you sure you want to delete this pet entry?</string>
    <string name="confirm_delete_message_record">Are you sure you want to delete this record?</string>
    <string name="select_service_type">Select Service Type</string>
    <string name="sort_order_toggle">Sort</string>
    <string name="active">Active</string>
    <string name="archived">Archived</string>
    <string name="microchip_issuer_hint">Microchip Issuer</string>
    <string name="microchip_number_hint">Microchip Number</string>
    <string name="aggression_level">Aggression Level</string>
    <string name="edit_service">Update Service</string>
    <string name="record_type">Record Type</string>
    <string name="add_notification">Add Notification</string>
    <string name="enter_notification_details">Enter the notification details: </string>
    <string name="notification">Notification</string>
    <string name="select_category">Select Category</string>
    <string name="no_notifications_found">No notifications found</string>
    <string name="call_service">Call Service</string>
    <string name="email_service">Email Service</string>
    <string name="service_not_found">Service not found</string>
    <string name="contact_service">Contact Service</string>
</resources>
